compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.descriptors.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
  public static final class DefaultImpls /* PrivateInTrait.DefaultImpls*/ {
    private static java.lang.String getN(@org.jetbrains.annotations.NotNull() PrivateInTrait);//  getN(PrivateInTrait)

    private static java.lang.String getNn(@org.jetbrains.annotations.NotNull() PrivateInTrait);//  getNn(PrivateInTrait)

    private static void setNn(@org.jetbrains.annotations.NotNull() PrivateInTrait, java.lang.String);//  setNn(PrivateInTrait, java.lang.String)
  }
}
